harness-helloworld-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harness-helloworld
  labels:
    k8s-app: harness-helloworld
  namespace: harness-ci
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: harness-helloworld
  template:
    metadata:
      labels:
        k8s-app: harness-helloworld
    spec:
      containers:
        - name: harness-gohelloworldserver
          image: bissinc/harness-gohelloworldserver:v187
          ports:
            - containerPort: 8080
