harness-helloworld-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: harness-helloworld-service
  labels:
    k8s-app: harness-hellworld
  namespace: harness-ci
spec:
  selector:
    k8s-app: harness-helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
